ad user id in synching
